--- a/start.html
+++ b/start.html
@@ -13,67 +13,94 @@
       overflow-x: hidden;
     }
 
-    /* ===== السلايد شو ===== */
-    .slideshow {
-      position: relative;
-      width: 100%;
-      height: 350px;
+    .video-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100vw;
+      z-index: -1;
       overflow: hidden;
     }
 
-    .slide {
-      width: 100%;
-      height: 100%;
-      display: none;
-      position: absolute;
-      animation: zoom 6s infinite alternate ease-in-out;
-    }
-
-    .slide img {
+    .video-bg video {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
 
-    .active {
-      display: block;
-    }
-
-    @keyframes zoom {
-      0% { transform: scale(1); }
-      100% { transform: scale(1.1); }
-    }
-
-    .watch-btn {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 12px 24px;
-      background: rgba(255,0,0,0.85);
-      color: white;
-      font-size: 18px;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-      transition: 0.3s;
-    }
-
-    .watch-btn:hover {
-      background: red;
-      transform: translateX(-50%) scale(1.05);
-    }
-
-    /* ===== كارت يوتيوب ===== */
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 40px 16px;
+      padding: 100px 16px 60px;
+      gap: 40px;
     }
 
+    /* ===== كارت السلايد شو ===== */
+    .slideshow-card {
+      position: relative;
+      width: 90%;
+      max-width: 800px;
+      height: 300px;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
+    }
+
+    .slideshow-card img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      transition: opacity 1s ease-in-out;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .slideshow-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0,0,0,0.4);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      z-index: 2;
+    }
+
+    .slideshow-overlay h2 {
+      font-size: 32px;
+      font-weight: 900;
+      margin-bottom: 16px;
+      text-shadow: 2px 2px 6px black;
+    }
+
+    .watch-btn {
+      padding: 12px 20px;
+      background: red;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease, background 0.3s ease;
+    }
+
+    .watch-btn:hover {
+      transform: scale(1.05);
+      background: darkred;
+    }
+
+    /* ===== كارت اليوتيوب ===== */
     .yt-card {
       position: relative;
       width: 320px;
@@ -81,27 +108,71 @@
       border-radius: 24px;
       overflow: hidden;
       box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
-      margin-bottom: 40px;
       transition: transform 0.4s ease;
       cursor: pointer;
     }
 
-    .yt-card:hover { transform: scale(1.03); }
-    .yt-card img { width: 100%; height: 100%; object-fit: cover; display: block; }
-
-    .yt-overlay {
-      position: absolute; top: 0; left: 0; height: 100%; width: 100%;
-      display: flex; flex-direction: column; justify-content: center; align-items: center;
-      padding: 20px; color: white; background: rgba(0, 0, 0, 0.5); text-align: center;
+    .yt-card:hover {
+      transform: scale(1.03);
     }
 
-    .yt-overlay .title { font-size: 60px; font-weight: 900; margin-bottom: 0; color: #fff; text-shadow: 2px 2px 6px black; }
-    .yt-overlay .subtitle { font-size: 32px; font-weight: 900; margin-bottom: 16px; text-shadow: 2px 2px 6px black; }
-    .yt-overlay .stat { font-size: 16px; margin: 4px 0; background: rgba(255,0,0,0.7); padding: 6px 12px; border-radius: 10px; display: inline-block; text-shadow: 0 1px 2px #000; }
+    .yt-card img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    .yt-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      color: white;
+      background: rgba(0, 0, 0, 0.5);
+      text-align: center;
+    }
+
+    .yt-overlay .title {
+      font-size: 60px;
+      font-weight: 900;
+      margin-bottom: 0px;
+      color: #fff;
+      text-shadow: 2px 2px 6px black;
+    }
+
+    .yt-overlay .subtitle {
+      font-size: 32px;
+      font-weight: 900;
+      margin-bottom: 16px;
+      color: #fff;
+      text-shadow: 2px 2px 6px black;
+    }
+
+    .yt-overlay .stat {
+      font-size: 16px;
+      margin: 4px 0;
+      color: #fff;
+      background: rgba(255, 0, 0, 0.7);
+      padding: 6px 12px;
+      border-radius: 10px;
+      display: inline-block;
+      text-shadow: 0 1px 2px #000;
+    }
 
     /* ===== الأزرار ===== */
     .buttons {
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 14px; max-width: 700px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 14px;
+      max-width: 700px;
     }
 
     .button-link {
@@ -113,11 +184,15 @@
       text-align: center;
       font-weight: bold;
       font-size: 13px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.25);
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
       transition: all 0.4s ease;
     }
 
-    .button-link:hover { transform: scale(1.06) rotate(-1deg); filter: brightness(1.2); }
+    .button-link:hover {
+      transform: scale(1.06) rotate(-1deg);
+      filter: brightness(1.2);
+    }
+
     .button-link:nth-child(1) { background: #7e57c2; animation: bounce 2s infinite; }
     .button-link:nth-child(2) { background: #29b6f6; animation: pulse 2s infinite; }
     .button-link:nth-child(3) { background: #66bb6a; animation: wiggle 2s infinite; }
@@ -126,33 +201,67 @@
     .button-link:nth-child(6) { background: #26a69a; animation: wiggle 2s infinite; }
     .button-link:nth-child(7) { background: #ab47bc; animation: bounce 2s infinite; }
 
-    @keyframes pulse { 0%,100%{box-shadow:0 0 10px rgba(255,255,255,0.3);} 50%{box-shadow:0 0 18px rgba(255,255,255,0.6);} }
-    @keyframes bounce { 0%,100%{transform:translateY(0);} 50%{transform:translateY(-6px);} }
-    @keyframes wiggle { 0%,100%{transform:rotate(0);} 25%{transform:rotate(1deg);} 75%{transform:rotate(-1deg);} }
+    @keyframes pulse {
+      0%, 100% { box-shadow: 0 0 10px rgba(255,255,255,0.3); }
+      50% { box-shadow: 0 0 18px rgba(255,255,255,0.6); }
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-6px); }
+    }
+
+    @keyframes wiggle {
+      0%, 100% { transform: rotate(0deg); }
+      25% { transform: rotate(1deg); }
+      75% { transform: rotate(-1deg); }
+    }
 
     @media(max-width: 500px) {
-      .yt-card { width: 90%; height: 440px; }
-      .buttons .button-link { flex: 0 0 100%; }
-      .yt-overlay .title { font-size: 38px; }
-      .yt-overlay .subtitle { font-size: 26px; }
-      .yt-overlay .stat { font-size: 14px; }
+      .yt-card {
+        width: 90%;
+        height: 440px;
+      }
+
+      .buttons .button-link {
+        flex: 0 0 100%;
+      }
+
+      .yt-overlay .title {
+        font-size: 38px;
+      }
+
+      .yt-overlay .subtitle {
+        font-size: 26px;
+      }
+
+      .yt-overlay .stat {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
-
-  <!-- ===== السلايد شو ===== -->
-  <div class="slideshow">
-    <!-- السلايد الأول -->
-    <div class="slide active">
-      <img src="https://files.catbox.moe/s5u250.png" alt="سلايد 1">
-    </div>
-    <!-- هنا تضيف سلايد جديدة بنفس التنسيق -->
-    <button class="watch-btn" onclick="window.open('https://www.youtube.com/watch?v=XXXX', '_blank')">🎬 شاهد الآن</button>
+  <div class="video-bg">
+    <video autoplay muted loop playsinline>
+      <source src="https://files.catbox.moe/1dldfl.mp4" type="video/mp4">
+    </video>
   </div>
 
   <div class="container">
-    <!-- ===== كارت اليوتيوب ===== -->
+
+    <!-- كارت السلايد شو -->
+    <div class="slideshow-card">
+      <img src="https://files.catbox.moe/k7l5vg.jpg" alt="عرض الفيديو" class="slide" style="opacity:1;">
+      <img src="https://files.catbox.moe/4mdr3d.jpeg" alt="عرض الفيديو" class="slide" style="opacity:0;">
+      <img src="https://files.catbox.moe/xyz123.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
+      <div class="slideshow-overlay">
+        <h2>أحدث فيديو على قناتنا</h2>
+        <a href="https://youtu.be/Qvgq0KsjhGY" target="_blank" class="watch-btn">شاهد الآن ▶</a>
+      </div>
+    </div>
+
+    <!-- كارت اليوتيوب -->
     <div class="yt-card">
       <img src="https://files.catbox.moe/4mdr3d.jpeg" alt="قناة مستر فيصل">
       <div class="yt-overlay">
@@ -163,7 +272,7 @@
       </div>
     </div>
 
-    <!-- ===== الأزرار ===== -->
+    <!-- الأزرار -->
     <div class="buttons">
       <a href="cors.html" class="button-link">منصتنا التعليمية 🏫</a>
       <a href="motaba.html" class="button-link">المتابعة 📱</a>
@@ -173,22 +282,17 @@
       <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
       <a href="shakwy.html" class="button-link">الشكاوي 📣</a>
     </div>
+
   </div>
 
   <script>
-    // لو أضفت أكثر من سلايد هتشتغل تلقائي
-    let slideIndex = 0;
-    const slides = document.querySelectorAll(".slide");
-
-    function showSlides() {
-      slides.forEach(s => s.classList.remove("active"));
-      slideIndex = (slideIndex + 1) % slides.length;
-      slides[slideIndex].classList.add("active");
-    }
-
-    if (slides.length > 1) {
-      setInterval(showSlides, 5000); // يغير كل 5 ثواني
-    }
+    let slides = document.querySelectorAll('.slideshow-card .slide');
+    let current = 0;
+    setInterval(() => {
+      slides[current].style.opacity = 0;
+      current = (current + 1) % slides.length;
+      slides[current].style.opacity = 1;
+    }, 3000);
   </script>
 </body>
 </html>
