--- a/start.html
+++ b/start.html
@@ -252,9 +252,9 @@
 
     <!-- كارت السلايد شو -->
     <div class="slideshow-card">
-      <img src="https://files.catbox.moe/k7l5vg.jpg" alt="عرض الفيديو" class="slide" style="opacity:1;">
-      <img src="https://files.catbox.moe/4mdr3d.jpeg" alt="عرض الفيديو" class="slide" style="opacity:0;">
-      <img src="https://files.catbox.moe/xyz123.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
+      <img src="https://files.catbox.moe/kwdy1q.jpg" alt="عرض الفيديو" class="slide" style="opacity:1;">
+      <img src="https://files.catbox.moe/kwdy1q.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
+      <img src="https://files.catbox.moe/kwdy1q.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
       <div class="slideshow-overlay">
         <h2>أحدث فيديو على قناتنا</h2>
         <a href="https://youtu.be/Qvgq0KsjhGY" target="_blank" class="watch-btn">شاهد الآن ▶</a>
