--- a/start.html
+++ b/start.html
@@ -252,12 +252,12 @@
 
     <!-- كارت السلايد شو -->
     <div class="slideshow-card">
-      <img src="https://files.catbox.moe/kwdy1q.jpg" alt="عرض الفيديو" class="slide" style="opacity:1;">
-      <img src="https://files.catbox.moe/kwdy1q.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
-      <img src="https://files.catbox.moe/kwdy1q.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
+      <img src="https://files.catbox.moe/ctw8xm.jpg" alt="عرض الفيديو" class="slide" style="opacity:1;">
+      <img src="https://files.catbox.moe/ctw8xm.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
+      <img src="https://files.catbox.moe/ctw8xm.jpg" alt="عرض الفيديو" class="slide" style="opacity:0;">
       <div class="slideshow-overlay">
         <h2>أحدث فيديو على قناتنا</h2>
-        <a href="https://youtu.be/Qvgq0KsjhGY" target="_blank" class="watch-btn">شاهد الآن ▶</a>
+        <a href="https://youtu.be/Qvgq0KsjhGY" target="_blank" class="watch-btn">شاهد الآن المحاضرة التعريفيه ▶</a>
       </div>
     </div>
 
