--- a/track.html
+++ b/track.html
@@ -2,623 +2,23 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>طلب شراء</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>عرض صفحة Google Script</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
-
-    body {
-      font-family: 'Cairo', Arial, sans-serif;
-      background: linear-gradient(135deg, #e0f0ff, #ffffff);
-      margin: 0; padding: 20px;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      overflow-x: hidden;
+    body, html {
+      margin: 0; padding: 0; height: 100%;
+      direction: rtl;
     }
-
-    .container {
+    iframe {
       width: 100%;
-      max-width: 600px;
-      background: white;
-      border-radius: 15px;
-      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-      padding: 30px 40px 40px;
-      box-sizing: border-box;
-      position: relative;
-    }
-
-    h2 {
-      text-align: center;
-      color: #1a1a1a;
-      margin-bottom: 25px;
-      font-weight: 700;
-      font-size: 28px;
-      letter-spacing: 1.2px;
-      user-select: none;
-    }
-
-    label {
-      display: block;
-      margin-top: 20px;
-      font-weight: 600;
-      color: #444;
-      font-size: 16px;
-      user-select: none;
-    }
-
-    input[type="text"],
-    input[type="tel"],
-    input[type="file"] {
-      width: 100%;
-      padding: 12px 15px;
-      margin-top: 7px;
-      border: 2px solid #ddd;
-      border-radius: 10px;
-      font-size: 17px;
-      transition: border-color 0.3s ease;
-    }
-
-    input[type="text"]:focus,
-    input[type="tel"]:focus,
-    input[type="file"]:focus {
-      outline: none;
-      border-color: #28a745;
-      box-shadow: 0 0 8px rgba(40, 167, 69, 0.3);
-    }
-
-    button {
-      width: 100%;
-      margin-top: 30px;
-      background-color: #28a745;
-      color: white;
+      height: 100vh;
       border: none;
-      font-size: 20px;
-      padding: 15px;
-      border-radius: 12px;
-      cursor: pointer;
-      font-weight: 700;
-      letter-spacing: 1.1px;
-      box-shadow: 0 6px 15px rgba(40, 167, 69, 0.5);
-      transition: background-color 0.4s ease, transform 0.2s ease;
-      user-select: none;
-      position: relative;
-      overflow: hidden;
-    }
-
-    button:hover {
-      background-color: #218838;
-      transform: scale(1.05);
-    }
-
-    button:active {
-      transform: scale(0.95);
-    }
-
-    #message {
-      margin-top: 25px;
-      font-weight: 700;
-      text-align: center;
-      font-size: 18px;
-      min-height: 28px;
-      user-select: none;
-      color: red;
-    }
-
-    /* كارت الفيديو */
-    .product-card {
-      background: #f8faff;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-      margin-bottom: 30px;
-      overflow: hidden;
-      user-select: none;
-    }
-
-    .video-wrapper {
-      position: relative;
-      width: 100%;
-      height: 0;
-      padding-bottom: 56.25%; /* 16:9 */
-      overflow: hidden;
-      border-radius: 15px 15px 0 0;
-    }
-
-    .video-wrapper video {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 15px 15px 0 0;
-    }
-
-    .product-info {
-      padding: 15px 20px;
-      text-align: center;
-      font-size: 18px;
-      color: #333;
-      font-weight: 600;
-    }
-
-    /* شاشة التحميل */
-    #loadingScreen {
-      position: fixed;
-      inset: 0;
-      background: rgba(255, 255, 255, 0.95);
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      font-family: 'Cairo', sans-serif;
-      font-size: 24px;
-      font-weight: 700;
-      color: #28a745;
-      user-select: none;
-      padding: 20px;
-      text-align: center;
-    }
-
-    /* كارت جاري الشحن */
-    #loadingCard {
-      background: #e6f4ea;
-      border-radius: 20px;
-      padding: 25px 40px;
-      box-shadow: 0 8px 20px rgba(40, 167, 69, 0.3);
-      display: flex;
-      align-items: center;
-      gap: 30px;
-      max-width: 360px;
-      width: 90%;
-      user-select: none;
-    }
-
-    /* اللوتي داخل الكارت بحجم مضبوط */
-    #loadingCard dotlottie-wc {
-      width: 130px !important;
-      height: 130px !important;
-      flex-shrink: 0;
-    }
-
-    /* نص جاري الشحن داخل الكارت */
-    #loadingText {
-      font-size: 28px;
-      font-weight: 900;
-      color: #218838;
-      font-family: 'Cairo', sans-serif;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      user-select: none;
-    }
-
-    .animated-part {
-      display: inline-block;
-      animation: bounceText 1.5s ease-in-out infinite;
-      color: #28a745;
-    }
-
-    @keyframes bounceText {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-14px); }
-    }
-
-    /* شاشة التأكيد */
-    #confirmationScreen {
-      position: fixed;
-      inset: 0;
-      background: #28a745;
-      color: white;
-      font-family: 'Cairo', sans-serif;
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px;
-      z-index: 10000;
-      text-align: center;
-      user-select: none;
-    }
-
-    #confirmationScreen h1 {
-      font-size: 48px;
-      margin-bottom: 15px;
-      animation: bounceIn 1s ease forwards;
-    }
-
-    #confirmationScreen p {
-      font-size: 20px;
-      margin-bottom: 20px;
-    }
-
-    .order-details {
-      background: rgba(255,255,255,0.2);
-      padding: 25px 20px;
-      border-radius: 15px;
-      max-width: 460px;
-      width: 100%;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-      font-size: 18px;
-      margin-bottom: 25px;
-      line-height: 1.6;
-      word-break: break-word;
-      position: relative;
-      user-select: text;
-      text-align: right;
-    }
-
-    /* ايموجي صح كبير متحرك في يمين أعلى الكارت */
-    .checkmark-emoji {
-      font-size: 90px;
-      position: absolute;
-      top: 12px;
-      right: 15px;
-      animation: bounceEmoji 1.2s ease infinite;
-      user-select: none;
-      filter: drop-shadow(0 2px 2px rgba(0,0,0,0.15));
-    }
-
-    @keyframes bounceEmoji {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-20px); }
-    }
-
-    /* نص فوق كود التتبع */
-    #trackingHint {
-      font-size: 20px;
-      margin-bottom: 10px;
-      font-weight: 600;
-      position: relative;
-      user-select: none;
-      max-width: 460px;
-      width: 100%;
-      color: white;
-    }
-
-    /* سهم بسيط يطلع من النص لكود التتبع */
-    #trackingHint::after {
-      content: '👇';
-      font-size: 30px;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      bottom: -35px;
-      user-select: none;
-    }
-
-    /* كود التتبع */
-    #trackingCode {
-      background: white;
-      color: #28a745;
-      font-weight: 700;
-      font-size: 28px;
-      padding: 15px 30px;
-      border-radius: 15px;
-      user-select: all;
-      cursor: pointer;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
-      transition: background-color 0.3s ease;
-      max-width: 460px;
-      width: 100%;
-      margin: 0 auto 20px auto;
-      text-align: center;
-    }
-
-    #trackingCode:hover {
-      background-color: #d4edda;
-    }
-
-    /* زر الإغلاق */
-    #closeBtn {
-      background: white;
-      color: #28a745;
-      font-weight: 700;
-      border: none;
-      padding: 14px 40px;
-      font-size: 20px;
-      border-radius: 12px;
-      cursor: pointer;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-      transition: background-color 0.3s ease;
-      user-select: none;
-    }
-
-    #closeBtn:hover {
-      background-color: #d4edda;
-    }
-
-    /* انيميشن bounceIn */
-    @keyframes bounceIn {
-      0% {
-        opacity: 0;
-        transform: scale(0.3);
-      }
-      50% {
-        opacity: 1;
-        transform: scale(1.05);
-      }
-      70% {
-        transform: scale(0.9);
-      }
-      100% {
-        transform: scale(1);
-      }
-    }
-
-    /* responsive */
-    @media (max-width: 650px) {
-      .container {
-        padding: 20px 25px 30px;
-      }
-      h2 {
-        font-size: 24px;
-      }
-      label {
-        font-size: 14px;
-      }
-      input[type="text"],
-      input[type="tel"],
-      input[type="file"] {
-        font-size: 16px;
-        padding: 12px 15px;
-      }
-      button {
-        font-size: 18px;
-        padding: 13px;
-      }
-      .product-info {
-        font-size: 16px;
-      }
-      #loadingScreen {
-        font-size: 20px;
-      }
-      #loadingCard {
-        max-width: 300px;
-        padding: 20px 25px;
-        gap: 20px;
-      }
-      #loadingCard dotlottie-wc {
-        width: 100px !important;
-        height: 100px !important;
-      }
-      #loadingText {
-        font-size: 22px;
-        gap: 8px;
-      }
-      #confirmationScreen h1 {
-        font-size: 36px;
-      }
-      #confirmationScreen p {
-        font-size: 18px;
-      }
-      .order-details {
-        font-size: 16px;
-        max-width: 100%;
-        padding: 20px 15px;
-      }
-      #trackingHint {
-        font-size: 18px;
-        max-width: 100%;
-      }
-      #trackingCode {
-        font-size: 22px;
-        max-width: 100%;
-        padding: 12px 20px;
-      }
-      #closeBtn {
-        font-size: 18px;
-        padding: 12px 30px;
-      }
     }
   </style>
-
-  <!-- لوتي -->
-  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
-
 </head>
 <body>
-
-  <div class="container" id="mainContainer" role="main">
-    <h2>طلب شراء</h2>
-
-    <div class="product-card" aria-label="منتج المذكرة">
-      <div class="video-wrapper">
-        <video src="https://files.catbox.moe/lgvvn8.mp4" autoplay muted loop playsinline></video>
-      </div>
-      <div class="product-info">مذكرة الصف الثالث الثانوي - السعر: 230 جنيه (شامل الشحن)</div>
-    </div>
-
-    <form id="orderForm" autocomplete="off" novalidate>
-      <label for="name">اسم العميل</label>
-      <input type="text" id="name" name="name" placeholder="اكتب اسمك الكامل" required />
-
-      <label for="phone">رقم الهاتف</label>
-      <input type="tel" id="phone" name="phone" pattern="[0-9]{9,15}" placeholder="رقم هاتف صحيح" required />
-
-      <label for="governorate">المحافظة</label>
-      <input type="text" id="governorate" name="governorate" placeholder="مثال: القاهرة" required />
-
-      <label for="phoneAlt">الهاتف البديل</label>
-      <input type="tel" id="phoneAlt" name="phoneAlt" pattern="[0-9]{9,15}" placeholder="رقم هاتف بديل" />
-
-      <label for="address">العنوان</label>
-      <input type="text" id="address" name="address" placeholder="العنوان بالتفصيل" required />
-
-      <label for="transferNumber">رقم التحويل</label>
-      <input type="text" id="transferNumber" name="transferNumber" placeholder="رقم التحويل" required />
-
-      <label for="transferImage">صورة التحويل</label>
-      <input type="file" id="transferImage" name="transferImage" accept="image/*" required />
-
-      <button type="submit" id="buyBtn">اشتري الآن</button>
-    </form>
-
-    <div id="message" role="alert" aria-live="polite"></div>
-  </div>
-
-  <!-- شاشة التحميل -->
-  <div id="loadingScreen" aria-live="assertive" role="alert" >
-    <div id="loadingCard" role="region" aria-label="جاري شحن الطلب">
-      <dotlottie-wc src="https://lottie.host/1d706623-ba9d-4493-b516-a89415725aab/5xTwGriKjM.lottie" speed="1" autoplay loop></dotlottie-wc>
-      <div id="loadingText">
-        <span class="animated-part">جارٍ</span> شحن يامعلم...
-      </div>
-    </div>
-  </div>
-
-  <!-- شاشة التأكيد -->
-  <div id="confirmationScreen" role="dialog" aria-modal="true" aria-labelledby="confirmationTitle" aria-describedby="confirmationDesc">
-    <h1 id="confirmationTitle">تم الشحن يامعلم! 🎉</h1>
-    <p id="confirmationDesc">شكراً لطلبك، فيما يلي تفاصيل طلبك وكود التتبع الخاص بك.</p>
-
-    <div class="order-details" id="orderDetails" tabindex="0" aria-label="تفاصيل الطلب">
-      <div class="checkmark-emoji" aria-hidden="true">✅</div>
-    </div>
-
-    <p id="trackingHint">ده كود تتبع بتاعك علشان تشوف أوردرَك وصل لفين:</p>
-    <div id="trackingCode" title="انقر لنسخ كود التتبع" tabindex="0" role="button" aria-pressed="false" aria-label="كود التتبع: انقر لنسخه"></div>
-
-    <button id="closeBtn" aria-label="إغلاق شاشة التأكيد">اغلق</button>
-  </div>
-
-  <script>
-    // هنا حط رابط Web App الخاص بك في جوجل سكريبت
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbw_lxBYJMOw3rphLFGdXzh_EsynjPXjJHQjbfADijBjlx2E0Ydb-Zl84I4Q6krywO7_/exec";
-
-    const form = document.getElementById("orderForm");
-    const message = document.getElementById("message");
-    const loadingScreen = document.getElementById("loadingScreen");
-    const confirmationScreen = document.getElementById("confirmationScreen");
-    const orderDetails = document.getElementById("orderDetails");
-    const trackingCodeEl = document.getElementById("trackingCode");
-    const closeBtn = document.getElementById("closeBtn");
-
-    form.addEventListener("submit", async function(e) {
-      e.preventDefault();
-      message.textContent = "";
-
-      // التحقق من المدخلات الأساسية
-      if (!form.name.value.trim()) {
-        message.textContent = "من فضلك اكتب اسمك.";
-        return;
-      }
-      if (!form.phone.value.trim() || !/^\d{9,15}$/.test(form.phone.value.trim())) {
-        message.textContent = "رقم الهاتف غير صحيح.";
-        return;
-      }
-      if (!form.governorate.value.trim()) {
-        message.textContent = "من فضلك اكتب المحافظة.";
-        return;
-      }
-      if (!form.address.value.trim()) {
-        message.textContent = "من فضلك اكتب العنوان.";
-        return;
-      }
-      if (!form.transferNumber.value.trim()) {
-        message.textContent = "من فضلك اكتب رقم التحويل.";
-        return;
-      }
-      if (!form.transferImage.files.length) {
-        message.textContent = "من فضلك ارفع صورة التحويل.";
-        return;
-      }
-
-      // عرض شاشة التحميل
-      loadingScreen.style.display = "flex";
-
-      // تجهيز بيانات الفورم للإرسال
-      try {
-        // قراءة صورة التحويل كـ Base64
-        const file = form.transferImage.files[0];
-        const base64Image = await readFileAsBase64(file);
-
-        // تجهيز البيانات JSON
-        const dataToSend = {
-          name: form.name.value.trim(),
-          phone: form.phone.value.trim(),
-          governorate: form.governorate.value.trim(),
-          phoneAlt: form.phoneAlt.value.trim() || "",
-          address: form.address.value.trim(),
-          transferNumber: form.transferNumber.value.trim(),
-          transferImageBase64: base64Image,
-          product: "مذكرة الصف الثالث الثانوي",
-          price: 230
-        };
-
-        // ارسال البيانات للـ Apps Script باستخدام fetch
-        const response = await fetch(WEB_APP_URL, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(dataToSend)
-        });
-
-        if (!response.ok) throw new Error("فشل في الاتصال بالخادم");
-
-        const result = await response.json();
-
-        if (result.status === "success") {
-          showConfirmation(result.orderId, dataToSend);
-        } else {
-          throw new Error(result.message || "حدث خطأ أثناء معالجة الطلب");
-        }
-      } catch (error) {
-        message.textContent = error.message;
-      } finally {
-        loadingScreen.style.display = "none";
-      }
-    });
-
-    function readFileAsBase64(file) {
-      return new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.onerror = () => reject(new Error("فشل في قراءة ملف الصورة"));
-        reader.readAsDataURL(file);
-      });
-    }
-
-    function showConfirmation(orderId, data) {
-      orderDetails.innerHTML = `
-        <strong>اسم العميل:</strong> ${data.name}<br>
-        <strong>رقم الهاتف:</strong> ${data.phone}<br>
-        <strong>المحافظة:</strong> ${data.governorate}<br>
-        <strong>الهاتف البديل:</strong> ${data.phoneAlt || "-"}<br>
-        <strong>العنوان:</strong> ${data.address}<br>
-        <strong>رقم التحويل:</strong> ${data.transferNumber}<br>
-        <strong>المنتج:</strong> ${data.product}<br>
-        <strong>السعر:</strong> ${data.price} جنيه
-      `;
-      trackingCodeEl.textContent = orderId;
-      confirmationScreen.style.display = "flex";
-      trackingCodeEl.setAttribute("aria-pressed", "false");
-
-      // نسخ الكود عند الضغط عليه
-      trackingCodeEl.onclick = () => {
-        navigator.clipboard.writeText(orderId)
-          .then(() => {
-            trackingCodeEl.textContent = "تم النسخ! " + orderId;
-            trackingCodeEl.setAttribute("aria-pressed", "true");
-            setTimeout(() => {
-              trackingCodeEl.textContent = orderId;
-              trackingCodeEl.setAttribute("aria-pressed", "false");
-            }, 2500);
-          })
-          .catch(() => {
-            alert("فشل النسخ، حاول مرة أخرى");
-          });
-      };
-    }
-
-    closeBtn.addEventListener("click", () => {
-      confirmationScreen.style.display = "none";
-      form.reset();
-      message.textContent = "";
-    });
-  </script>
+  <iframe src="https://script.google.com/macros/s/AKfycbwRft-bgtLITH7sN1RlC4FGattW4mjErKrJoSxzte3dCqcLIUbB79R_7s9SfmvvCoQ5CA/exec" 
+          allowfullscreen>
+  </iframe>
 </body>
 </html>
