--- a/ahsayat.html
+++ b/ahsayat.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>عرض صفحة Google Script</title>
+  <style>
+    body, html {
+      margin: 0; padding: 0; height: 100%;
+      direction: rtl;
+    }
+    iframe {
+      width: 100%;
+      height: 100vh;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://script.google.com/macros/s/AKfycbyoN6JBasuihLb4uTqD6SO6-7gtt39PxMvyxzRLIgUcVgvNQO2ilPCfJpXzm-LjDHwfdw/exec" 
+          allowfullscreen>
+  </iframe>
+</body>
+</html>
