--- a/start.html
+++ b/start.html
@@ -277,7 +277,7 @@
       <a href="cors.html" class="button-link">منصتنا التعليمية 🏫</a>
       <a href="motaba.html" class="button-link">المتابعة 📱</a>
       <a href="moayed.html" class="button-link">مواعيدنا ⏰</a>
-      <a href="contact.html" class="button-link">الامتحانات 📝</a>
+      <a href="hw.html" class="button-link">الواجبات 📝</a>
       <a href="track.html" class="button-link">اشتري من عندنا 🛒</a>
       <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
       <a href="shakwy.html" class="button-link">الشكاوي 📣</a>
