--- a/start.html
+++ b/start.html
@@ -252,7 +252,7 @@
 
     <!-- أحدث فيديو -->
     <section class="card-slide" aria-label="أحدث فيديو على قناتنا">
-      <img src="https://files.catbox.moe/nk1dak.jpg" alt="صورة فيديو تعريفي" />
+      <img src="https://files.catbox.moe/9vc0s5.jpg" alt="صورة فيديو تعريفي" />
       <div class="slide-overlay">
         <h2>أحدث فيديو على قناتنا</h2>
         <a href="https://youtu.be/Qvgq0KsjhGY" target="_blank" rel="noopener" aria-label="شاهد الآن المحاضرة التعريفية" class="slide-overlay-link">شاهد الآن ▶</a>
