--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <style>
+    :root {
+      --color-bg: #fff;
+      --color-text: #111;
+      --color-card-bg: #f9f9f9;
+      --color-card-shadow: rgba(0,0,0,0.12);
+      --color-tip-shadow-opacity: 0.08;
+      --color-link: #4caf50;
+      --color-link-hover: #2e7d32;
+    }
     body, html {
       margin: 0; padding: 0;
       font-family: 'Cairo', sans-serif;
-      color: #111;
+      color: var(--color-text);
       min-height: 100vh;
       overflow-x: hidden;
       scroll-behavior: smooth;
-      background: #fff;
+      background: var(--color-bg);
+      transition: background-color 0.4s ease, color 0.4s ease;
     }
     #preloader {
       position: fixed;
@@ -31,12 +41,13 @@
     #videoCard {
       max-width: 980px;
       margin: 30px auto 40px;
-      background: #f9f9f9;
+      background: var(--color-card-bg);
       border-radius: 18px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.12);
+      box-shadow: 0 8px 24px var(--color-card-shadow);
       overflow: hidden;
       position: relative;
       aspect-ratio: 16 / 9;
+      transition: background-color 0.4s ease, box-shadow 0.4s ease;
     }
     #videoCard video {
       width: 100%;
@@ -54,6 +65,7 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+      transition: background-color 0.4s ease;
     }
 
     /* كل ورقة نصيحة */
@@ -65,10 +77,10 @@
       font-style: normal;
       letter-spacing: 0.03em;
       user-select: none;
-      transition: box-shadow 0.3s ease, transform 0.3s ease;
+      transition: box-shadow 0.3s ease, transform 0.3s ease, background-color 0.4s ease, color 0.4s ease;
       cursor: default;
-      color: #111;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      color: var(--color-text);
+      box-shadow: 0 8px 20px rgba(0,0,0,var(--color-tip-shadow-opacity));
     }
     .tipCard:hover {
       box-shadow: 0 14px 28px rgba(0,0,0,0.15);
@@ -96,11 +108,13 @@
       box-shadow: 0 8px 24px rgba(46,125,50,0.6);
       letter-spacing: 0.06em;
       user-select: none;
+      transition: background 0.4s ease;
     }
 
     .content {
       background: white;
       padding: 0 16px 40px;
+      transition: background-color 0.4s ease;
     }
     .social-section {
       display: flex;
@@ -120,7 +134,7 @@
       display: flex;
       align-items: center;
       gap: 16px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.4s ease, border-color 0.4s ease;
     }
     .social-card:hover {
       transform: scale(1.04);
@@ -128,10 +142,11 @@
       border-color: #4caf50;
     }
     .social-card a {
-      color: #111;
+      color: var(--color-text);
       text-decoration: none;
       flex: 1;
       display: block;
+      transition: color 0.4s ease;
     }
     .social-card img {
       width: 56px;
@@ -142,6 +157,7 @@
       padding: 6px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.12);
       flex-shrink: 0;
+      transition: background-color 0.4s ease;
     }
     /* زر ابدأ الرحلة */
     .start-journey {
@@ -171,7 +187,7 @@
     }
     footer {
       width: 100%;
-      padding: 12px 8px 28px; /* زيادة مساحة للروابط تحت */
+      padding: 12px 8px 28px;
       text-align: center;
       font-size: 11px;
       color: #999;
@@ -181,27 +197,107 @@
       box-shadow: inset 0 1px 2px rgba(0,0,0,0.05);
       position: relative;
       user-select: none;
+      transition: background-color 0.4s ease, color 0.4s ease;
     }
     footer span, footer a.wa-link {
       font-style: italic;
-      color: #4caf50;
+      color: var(--color-link);
       font-weight: 700;
       cursor: pointer;
       text-decoration: underline;
+      transition: color 0.4s ease;
     }
     footer a.privacy-link {
       display: block;
       margin-top: 8px;
       font-size: 12px;
-      color: #4caf50;
+      color: var(--color-link);
       text-decoration: none;
       font-weight: 700;
       user-select: none;
       transition: color 0.3s ease;
     }
     footer a.privacy-link:hover {
-      color: #2e7d32;
+      color: var(--color-link-hover);
       text-decoration: underline;
+    }
+
+    /* زرار الوضع الليلي */
+    #toggleDarkMode {
+      position: fixed;
+      top: 12px;
+      left: 12px; /* لأن dir=rtl */
+      background: var(--color-link);
+      border: none;
+      border-radius: 12px;
+      padding: 8px 14px;
+      color: white;
+      font-weight: 700;
+      font-size: 14px;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(76,175,80,0.6);
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      z-index: 10000;
+      user-select: none;
+    }
+    #toggleDarkMode:hover {
+      background: var(--color-link-hover);
+      transform: scale(1.05);
+    }
+
+    /* الوضع الليلي */
+    body.dark {
+      --color-bg: #121212;
+      --color-text: #ddd;
+      --color-card-bg: #1e1e1e;
+      --color-card-shadow: rgba(0,0,0,0.8);
+      --color-tip-shadow-opacity: 0.3;
+      --color-link: #81c784;
+      --color-link-hover: #519657;
+      background-color: var(--color-bg);
+      color: var(--color-text);
+    }
+    body.dark #videoCard {
+      background-color: var(--color-card-bg);
+      box-shadow: 0 8px 24px var(--color-card-shadow);
+    }
+    body.dark .tipCard {
+      color: var(--color-text);
+      box-shadow: 0 8px 20px rgba(0,0,0,var(--color-tip-shadow-opacity));
+    }
+    body.dark .welcome-card {
+      background: linear-gradient(135deg, #81c784, #519657);
+      box-shadow: 0 8px 24px rgba(81,150,87,0.8);
+    }
+    body.dark .content {
+      background-color: var(--color-card-bg);
+    }
+    body.dark .social-card {
+      background-color: var(--color-card-bg);
+      border-color: #519657;
+    }
+    body.dark .social-card:hover {
+      border-color: var(--color-link-hover);
+      box-shadow: 0 10px 30px rgba(129,199,132,0.5);
+    }
+    body.dark .social-card a {
+      color: var(--color-text);
+    }
+    body.dark .social-card img {
+      background-color: var(--color-card-bg);
+    }
+    body.dark footer {
+      background-color: #1a1a1a;
+      color: #aaa;
+    }
+    body.dark footer span, body.dark footer a.wa-link {
+      color: var(--color-link);
+    }
+    body.dark footer a.privacy-link {
+      color: var(--color-link);
+    }
+    body.dark footer a.privacy-link:hover {
+      color: var(--color-link-hover);
     }
 
     /* استجابة للموبايل */
@@ -231,10 +327,19 @@
         aspect-ratio: 16 / 9;
         margin: 20px auto 30px;
       }
+      #toggleDarkMode {
+        top: 8px;
+        left: 8px;
+        padding: 6px 12px;
+        font-size: 13px;
+      }
     }
   </style>
 </head>
 <body>
+
+  <!-- زرار الوضع الليلي -->
+  <button id="toggleDarkMode" aria-pressed="false" aria-label="تبديل الوضع الليلي">🌙 الليل</button>
 
   <!-- شاشة التحميل -->
   <div id="preloader" aria-label="تحميل">
@@ -336,6 +441,14 @@
       preloader.style.transition = 'opacity 0.8s ease';
       preloader.style.opacity = 0;
       setTimeout(() => preloader.style.display = 'none', 800);
+    });
+
+    const toggleBtn = document.getElementById('toggleDarkMode');
+    toggleBtn.addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+      const isDark = document.body.classList.contains('dark');
+      toggleBtn.textContent = isDark ? '☀️ النهار' : '🌙 الليل';
+      toggleBtn.setAttribute('aria-pressed', isDark);
     });
   </script>
 
